--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>MainPractice</title>
 </head>
 <body>
-    <h1>MainPracticeJs</h1>
+    <h1>MainPracticeJs ON</h1>
     <script src="/js/main.js"></script>
 </body>
 </html>
