--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <h1>MainPracticeJs ON</h1>
+    <ul>
+        <li>
+            <div class="list_item">fuck</div>
+        </li>
+    </ul>
     <script src="/js/main.js"></script>
 </body>
 </html>
